Main menu: fix padding for active item on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,7 +238,7 @@ button:not(:-moz-focusring):focus > .main-nav__btn-box {
 }
 
 .main-nav__item--active {
-	padding: .625rem;
+	padding: .625rem .875rem;
 }
 
 .main-nav__item--active:hover {
